# virveldsp

./: .clang-format  .gitmodules  CMakeLists.txt  MPR121.cpp  MPR121.cpp.old  Makefile  README.md
include/virveldsp/: allpass.h  chebyshev.h  comb.h  comb2.h  dcblock.h  delay.h  delay2.h  frequencyshifter.cpp  frequencyshifter.h  granulator.cpp  granulator.h  lfo.h  lowpass.h  onepole.h  utils.h
src/: allpass.h  comb.h  dcblock.h  delay.h  delay2.h  dsp.h  granulator.cpp  granulator.h  lfo.h  lowpass.h  reverb.h
tests/: CMakeLists.txt
tests/allpass/: CMakeLists.txt  allpass_test.cpp
tests/comb/: CMakeLists.txt  comb_test.cpp
tests/delay/: CMakeLists.txt  delay_test.cpp
tests/lfo/: CMakeLists.txt  lfo_test.cpp
virveldsp/: chebyshev.h  comb.h  lowpass.h
